# BindMaster2

./: .gitignore  BM2_MASTER_PLAN_FINAL.md  CLAUDE.md  README.md  pyproject.toml
agent/: design_template.py  design_template_proteina.py  inner_evaluator.py  loss_tuner.py  orchestrator.py  strategy.md  target_analyzer.py
bm2/: __init__.py
bm2/agents/: __init__.py  base.py  campaign_orchestrator.py  design_runner.py  evaluator_agent.py  maturation_agent.py  strategy_planner.py  target_analyst.py  wetlab_advisor.py
bm2/cli/: main.py
bm2/core/: campaign.py  config.py  models.py  target.py
bm2/skills/: __init__.py  manager.py
bm2/tests/: test_agents.py  test_campaign.py  test_cli.py  test_integration.py  test_launch_scripts.py  test_skills.py
bm2/tools/: __init__.py  base.py  bindcraft.py  boltzgen.py  complexa.py  mosaic.py  pxdesign.py  registry.py  rfdiffusion.py
bm2_evaluator/: __init__.py  cli.py
bm2_evaluator/core/: config.py  models.py
bm2_evaluator/docs/: target_misfolding.md
bm2_evaluator/ingestion/: __init__.py  base.py  bindcraft.py  boltzgen.py  complexa.py  generic.py  mosaic.py  pxdesign.py  rfdiffusion.py
bm2_evaluator/metrics/: __init__.py  ipsae.py  pae.py  plddt.py  rosetta.py
bm2_evaluator/refolding/: __init__.py  af2.py  base.py  boltz2.py  monomer.py  orchestrator.py
bm2_evaluator/reporting/: __init__.py  bm1_report.py  comparison.py  csv_export.py  html_report.py  text_report.py
tests/: conftest.py  test_config.py  test_ingestion.py  test_ipsae.py  test_models.py  test_pae.py  test_plddt.py  test_refolding.py  test_scoring.py
(+18 files in other folders)
